# siguelo_turnstile_solver

./: README.md  example.env  main.py  mypy.ini  pyproject.toml  requirements.txt
src/: __main__.py  config.py  exceptions.py  get_sitekey.py  get_turnstile_code.py  query_title.py  resolve_turnstile.py  wait_for_response.py
src/pom/siguelo/: query_title.py
src/siguelo_turnstile_solver/: exceptions.py
src/siguelo_turnstile_solver/models/: title.py  turnstile_solver.py
src/siguelo_turnstile_solver/pom/siguelo/query_title/: _exceptions.py  page.py
src/siguelo_turnstile_solver/utils/: get_user_agent.py
tests/: conftest.py  test_query_title.py
